--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,6 +77,7 @@ table {
 @font-face {
     font-family: 'Open Sans';
 	font-style: italic;
+	font-weight: 900;
     src: url(/fonts/OpenSans-BoldItalic.ttf);
 }
 
